# orin_nano_super_sources_code

./: .gitattributes  .gitignore  README.md
06_opencv/: img_binarize.py  img_crop.py  (+15 more)
12_llm_offline/seeed_ws/src/largemodel/: .gitignore  README.md  package.xml  setup.cfg  setup.py
12_llm_offline/seeed_ws/src/largemodel/config/: large_model_interface.yaml  seeed.yaml
12_llm_offline/seeed_ws/src/largemodel/largemodel/: __init__.py  asr.py  model_service copy.py  model_service.py  tts_only.py
12_llm_offline/seeed_ws/src/largemodel/launch/: asr_only.launch.py  largemodel_control.launch.py  tts_only.launch.py
12_llm_offline/seeed_ws/src/largemodel/utils/: ai_agent.py  large_model_interface.py  mcp_server.py  mic_serial.py  tool_adapters.py  tool_chain_manager.py  tools_manager.py
workspaces/src/SO-100-arm/: .setup_assistant  CMakeLists.txt  README.md  package.xml
workspaces/src/SO-100-arm/config/: controllers.yaml  controllers_5dof.yaml  controllers_7dof.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  so_100_arm.ros2_control.xacro  so_100_arm.srdf  so_100_arm.urdf.xacro  urdf.rviz
workspaces/src/SO-100-arm/launch/: gz.launch.py  hardware.launch.py  joint_state_pub_guilaunch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  rviz.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
workspaces/src/SO-100-arm/urdf/: so_100_arm.urdf  so_100_arm_5dof.csv  so_100_arm_5dof.urdf  so_100_arm_5dof_hardware.urdf
(+196 files in other folders)
