<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>largemodel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>interfaces</build_depend>
  <exec_depend>interfaces</exec_depend>

  <!-- System dependencies needed for Python packages -->
  <depend>build-essential</depend>
  <depend>cmake</depend>
  <depend>espeak-ng</depend>
  <depend>libespeak-ng-dev</depend>
  <depend>libonnxruntime-dev</depend>
  <depend>portaudio19-dev</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
